--- a/site/login.html
+++ b/site/login.html
@@ -5,9 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Online Chat Room</title>
+    <title>登录</title>
 </head>
 <body>
-    <p>Hello friend, gochat it's a im server . Writer By Golang !</p>
+
 </body>
 </html>
