--- a/site/index.html
+++ b/site/index.html
@@ -135,4 +135,6 @@
 </body>
 </html>
 <script src="/js/jquery.min.js"></script>
+<script src="/js/sweetalert.min.js"></script>
+<script src="/js/common.js"></script>
 <script src="/js/chat.js"></script>
