--- a/site/login.html
+++ b/site/login.html
@@ -22,7 +22,7 @@
 <body>
 
 <div style="width: 450px;margin: 200px auto;">
-    <form action="/login/doLogin" method="post">
+    <form method="post">
         <div class="mycenter">
             <div class="mysign">
                 <div class="col-lg-12 text-center text-info">
@@ -42,7 +42,7 @@
                 <div class="col-lg-12"></div>
                 <div class="col-lg-12"></div>
                 <div class="col-lg-12">
-                    <input type="submit" class="btn btn-success col-lg-12" value="Login" id="login">
+                    <input type="button" class="btn btn-success col-lg-12" value="Login" id="login">
                 </div>
                 <div class="col-lg-12 text-center" style="color: white;margin-top:10px;">
                     No account ! <a href="/register.html">Register</a>
