--- a/site/register.html
+++ b/site/register.html
@@ -22,7 +22,7 @@
 <body>
 
 <div style="width: 450px;margin: 200px auto;">
-    <form action="#" method="post">
+    <form method="post">
         <div class="mycenter">
             <div class="mysign">
                 <div class="col-lg-12 text-center text-info">
