--- a/site/index.html
+++ b/site/index.html
@@ -87,13 +87,13 @@
                 Live bulletin
             </div>
             <div class="announcement" id="roomAnnouncement">
-                <a href="https://github.com/LockGit/gochat" target="_blank">gochat github</a>
+                <a href="https://github.com/LockGit/gochat" target="_blank" style="color: red;font-weight: bold;font-size: 14px;">gochat github</a>
                 <br>
-                You are welcome to optimize it
+                 Welcome to You optimize it !
             </div>
             <ul class="tab">
-                <li class="crt j-tab" data-value="chat" id="tab_chat" onclick="changeTab('chat')">Live interaction</li>
-                <li class="j-tab" data-value="member" id="tab_member" onclick="changeTab('member')">Members online</li>
+                <li class="crt j-tab" data-value="chat" id="tab_chat" onclick="changeTab('chat')">Live Chat</li>
+                <li class="j-tab" data-value="member" id="tab_member" onclick="changeTab('member')">Online Members</li>
 
             </ul>
             <div class="chat j-pannel j-chat" id="msg">
