--- a/site/index.html
+++ b/site/index.html
@@ -87,7 +87,8 @@
                 Live bulletin
             </div>
             <div class="announcement" id="roomAnnouncement">
-                <a href="https://github.com/LockGit/gochat" target="_blank" style="color: red;font-weight: bold;font-size: 14px;">gochat github</a>
+                <a href="https://github.com/LockGit/gochat" target="_blank" style="color: red;font-weight: bold;font-size: 14px;text-decoration: underline;">gochat github</a>
+                <a href="https://github.com/LockGit/gochat" target="_blank" >(click)</a>
                 <br>
                  Welcome to You optimize it !
             </div>
