--- a/site/index.html
+++ b/site/index.html
@@ -84,7 +84,7 @@
         <div class="g-right">
             <div class="m-status hide" id="linkStatus">connect...</div>
             <div class="announcement_title">
-                Live bulletin
+                Live Room
             </div>
             <div class="announcement" id="roomAnnouncement">
                 <a href="https://github.com/LockGit/gochat" target="_blank" style="color: red;font-weight: bold;font-size: 14px;text-decoration: underline;">gochat github</a>
