--- a/site/index.html
+++ b/site/index.html
@@ -73,8 +73,8 @@
                 </div>
                 <div class="detail">
                     <p class="title" id="roomTitle">gochat Live Room</p>
-                    <p class="desc">Anchor：<span id="roomCreator">gochat</span>&nbsp;&nbsp;Live User Count：<span
-                                id="roomOnlineMemberNum">-</span></p>
+                    <p class="desc">Author：<span id="roomCreator">gochat</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Online User Count：<span
+                                id="roomOnlineMemberNum" style="color: green;font-weight: bold;">-</span></p>
                 </div>
             </div>
             <div class="media" style="text-align: center;">
