--- a/site/index.html
+++ b/site/index.html
@@ -59,7 +59,7 @@
     </div>
 </div>
 <div style="text-align: center;background:#e5f4ff;color: #000;width:1002px;margin: 2px auto;border:1px solid #ccc;font-size: 24px;border-radius: 5px;opacity: 0.8;">
-    Hello friend, gochat it's a im server . Write By Golang !
+    Hello friend, gochat it's an im server . Write By Golang !
 </div>
 <div class="g-doc">
     <div class="m-room" id="room">
